--- a/book/style.css
+++ b/book/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&display=swap");
 * {
   margin: 0;
   box-sizing: border-box;
@@ -1137,9 +1136,7 @@ body {
 
 .left-side:nth-child(100) {
   transform: translatez(100px) scalex(-1) translatex(100%) rotatey(180deg);
-}
-
-.page:nth-child(101) {
+}.page:nth-child(101) {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
   transform: translatez(-101px);
@@ -1148,9 +1145,7 @@ body {
 
 .left-side:nth-child(101) {
   transform: translatez(101px) rotatey(-180deg);
-}
-
-.page:nth-child(102) {
+}.page:nth-child(102) {
   padding: 5% 5% 4% 4%;
   transform-origin: 100% 50%;
   transform: translatez(-102px) scalex(-1) translatex(100%);
@@ -1160,7 +1155,6 @@ body {
 .left-side:nth-child(102) {
   transform: translatez(102px) scalex(-1) translatex(100%) rotatey(180deg);
 }
-
 .page:nth-child(103) {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
@@ -1171,7 +1165,6 @@ body {
 .left-side:nth-child(103) {
   transform: translatez(103px) rotatey(-180deg);
 }
-
 .page:nth-child(104) {
   padding: 5% 5% 4% 4%;
   transform-origin: 100% 50%;
@@ -1182,7 +1175,6 @@ body {
 .left-side:nth-child(104) {
   transform: translatez(104px) scalex(-1) translatex(100%) rotatey(180deg);
 }
-
 .page:nth-child(105) {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
@@ -1192,9 +1184,7 @@ body {
 
 .left-side:nth-child(105) {
   transform: translatez(105px) rotatey(-180deg);
-}
-
-.page:nth-child(106) {
+}.page:nth-child(106) {
   padding: 5% 5% 4% 4%;
   transform-origin: 100% 50%;
   transform: translatez(-106px) scalex(-1) translatex(100%);
@@ -1203,9 +1193,7 @@ body {
 
 .left-side:nth-child(106) {
   transform: translatez(106px) scalex(-1) translatex(100%) rotatey(180deg);
-}
-
-.page:nth-child(107) {
+}.page:nth-child(107) {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
   transform: translatez(-107px) ;
@@ -1214,9 +1202,26 @@ body {
 
 .left-side:nth-child(107) {
   transform: translatez(107px) rotatey(-180deg);
+}.page:nth-child(108) {
+  padding: 5% 5% 4% 4%;
+  transform-origin: 100% 50%;
+  transform: translatez(-108px) scalex(-1) translatex(100%);
+  background: #ccc;
 }
 
-.page:nth-child(108) {
+.left-side:nth-child(108) {
+  transform: translatez(108px) scalex(-1) translatex(100%) rotatey(180deg);
+
+}.page:nth-child(109) {
+  padding: 5% 4% 4% 5%;
+  transform-origin: 0% 50%;
+  transform: translatez(-109px) ;
+  background: #ccc;
+}
+
+.left-side:nth-child(109) {
+  transform: translatez(109px) rotatey(-180deg);
+}.page:nth-child(110) {
   padding: 5% 5% 4% 4%;
   transform-origin: 100% 50%;
   transform: translatez(-110px) scalex(-1) translatex(100%);
@@ -1292,17 +1297,14 @@ body {
   top: 3%;
 }
 
-.page p {
+p {
   margin-bottom: 4%;
-  font-family: 'Caveat', cursive;
-  font-weight: 500;
-  font-size: 18px;
+  font-family: "EB Garamond", serif;
+  font-size: 16px;
 }
 
 .page:nth-child(3) p:first-of-type:first-letter {
-  font-size: 36px;
-  font-family: 'Caveat', cursive;
-  font-weight: 500;
+  font-size: 32px;
 }
 
 .instruction {
